tests/asm/valid/ex.s
.name "zork"
.comment "just a basic living prog"
		
l2:	sti	r1,r1,%0
