tests/asm/error/param_direct_no_sp.s
.name "zork"
.comment "I'M ]ALIIIIVE"

ld:live,r1
live: ld-1, r1
	